Fix resize on mobile Chrome

--- a/css/style.css
+++ b/css/style.css
@@ -143,7 +143,7 @@ a:visited {
 }
 
 .background {
-  background-image: url("../pics/LittleNook.jpeg");
+  background-image: url("../pics/LittleNook.jpg");
   background-size: cover;
   background-position: center;
   height: 100vh;
